productcontroller,homecontroller,style,css,mission.blade,product.create,product.edit,admin_sidebar,web_footer,about.privacy,terms,index

--- a/public/admin/css/styles.css
+++ b/public/admin/css/styles.css
@@ -11405,3 +11405,6 @@ tr{
 #printable_table{
   display: none;
 }
+.select2-container--default .select2-selection--multiple .select2-selection__choice__display {
+  font-size: 11px;
+}
