--- a/public/admin/css/custom.css
+++ b/public/admin/css/custom.css
@@ -49,24 +49,24 @@ input[type="file" i]{
 ul#myTab\ tab-menu {
   justify-content: center;
 }
-.select-area{
-    display: block;
-    width: 90%;
-    padding: 0.2rem 0.65rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.2;
-    color: #212529;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+/* .select-area{
+  display: block;
+  width: 90%;
+  padding: 0.2rem 0.65rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
-}
+} */
 .select-area:focus{
   outline:0;
 
