checkoutcontroller,order.index,order.normal,off_proccess,off_way,offer_delivery,onproccess,op,share_sale,waiting_delivary,cart,checkout,customer_dashboard

--- a/public/website/assets/css/custom.css
+++ b/public/website/assets/css/custom.css
@@ -104,3 +104,7 @@ button[name=track] {
     -o-border-radius: 35px;
 }
 
+#account-orders .account-orders-table td {
+    padding-top: 1.1rem;
+    padding-bottom: 1.1rem;
+}
