--- a/public/website/assets/css/custom.css
+++ b/public/website/assets/css/custom.css
@@ -108,3 +108,24 @@ button[name=track] {
     padding-top: 1.1rem;
     padding-bottom: 1.1rem;
 }
+
+
+.product-wrap{
+    overflow: hidden;
+    background: #fff;
+    border-radius: 3px;
+    box-shadow: 0 0 1px rgba(0,0,0,.2),0 2px 4px rgba(0,0,0,.03);
+    transition: ease-in-out .3s ;
+    -webkit-transition: ease-in-out .3s ;
+    -moz-transition: ease-in-out .3s ;
+    -ms-transition: ease-in-out .3s ;
+    -o-transition: ease-in-out .3s ;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
+
+.product-wrap:hover {
+    box-shadow: 0 0 20px rgba(0,0,0,.15);
+  }
