--- a/public/website/assets/css/slider.css
+++ b/public/website/assets/css/slider.css
@@ -5,7 +5,7 @@
 }
 .swiper-slide-active .animate3 span {
   animation: ani3 5s forwards;
-  transform: translate(-700px, 300px) scale(2);
+  transform: translate(-800px, 0px) scale(2);
 }
 .sec4 .animate.show span {
   animation: ani4 .5s forwards;
@@ -13,7 +13,7 @@
 }
 .swiper-slide-active .animate5 span {
   animation: ani5 4s forwards;
-  transform: translate(-100px, -100px) rotate(360deg) scale(0);
+  transform: translate(800px, 0px) rotate(0deg) scale(2);
 }
 .swiper-slide-active .animate6 span {
   animation: ani6 .5s forwards;
@@ -28,37 +28,101 @@
 .swiper-slide-active .animate5 span {animation: ani5 .35s ease forwards;}
 .swiper-slide-active .animate6 span {animation: ani6 .35s ease forwards;}
 
-.animate span {opacity: 0; display: inline-block;}
-.animate span:nth-of-type(1) {animation-delay: .4s; animation-duration: 1s}
-.animate span:nth-of-type(2){animation-delay: .45s; animation-duration: 1s}
-.animate span:nth-of-type(3){animation-delay: .5s; animation-duration: 1s}
-.animate span:nth-of-type(4){animation-delay: .55s; animation-duration: 1s}
-.animate span:nth-of-type(5){animation-delay: .6s; animation-duration: 1s}
-.animate span:nth-of-type(6){animation-delay: .65s; animation-duration: 1s}
-.animate span:nth-of-type(7){animation-delay: .7s; animation-duration: 1s}
-.animate span:nth-of-type(8){animation-delay: .75s; animation-duration: 1s}
-.animate span:nth-of-type(9){animation-delay: .8s; animation-duration: 1s}
-.animate span:nth-of-type(10){animation-delay: .85s; animation-duration: 1s}
-.animate span:nth-of-type(11){animation-delay: .9s; animation-duration: 1s}
-.animate span:nth-of-type(12){animation-delay: .95s; animation-duration: 1s}
-.animate span:nth-of-type(13){animation-delay: 1.05s; animation-duration: 1s}
-.animate span:nth-of-type(14){animation-delay: 1.10s; animation-duration: 1s}
-.animate span:nth-of-type(15){animation-delay: 1.15s; animation-duration: 1s}
-.animate span:nth-of-type(16){animation-delay: 1.20s; animation-duration: 1s}
-.animate span:nth-of-type(17){animation-delay: 1.25s; animation-duration: 1s}
-.animate span:nth-of-type(18){animation-delay: 1.30s; animation-duration: 1s}
-.animate span:nth-of-type(19){animation-delay: 1.35s; animation-duration: 1s}
-.animate span:nth-of-type(20){animation-delay: 1.40s; animation-duration: 1s}
-.animate span:nth-of-type(21){animation-delay: 1.45s; animation-duration: 1s}
-.animate span:nth-of-type(22){animation-delay: 1.50s; animation-duration: 1s}
-.animate span:nth-of-type(23){animation-delay: 1.55s; animation-duration: 1s}
-.animate span:nth-of-type(24){animation-delay: 1.60s; animation-duration: 1s}
-.animate span:nth-of-type(25){animation-delay: 1.65s; animation-duration: 1s}
-.animate span:nth-of-type(26){animation-delay: 1.70s; animation-duration: 1s}
-.animate span:nth-of-type(27){animation-delay: 1.75s; animation-duration: 1s}
-.animate span:nth-of-type(28){animation-delay: 1.80s; animation-duration: 1s}
-.animate span:nth-of-type(29){animation-delay: 1.85s; animation-duration: 1s}
-.animate span:nth-of-type(30){animation-delay: 1.90s; animation-duration: 1s}
+.animate3 span {opacity: 0; display: inline-block;}
+.animate3 span:nth-of-type(60) {animation-delay: .50s; animation-duration: 1s}
+.animate3 span:nth-of-type(59){animation-delay: .55s; animation-duration: 1s}
+.animate3 span:nth-of-type(58){animation-delay: .60s; animation-duration: 1s}
+.animate3 span:nth-of-type(57){animation-delay: .65s; animation-duration: 1s}
+.animate3 span:nth-of-type(56){animation-delay: .70s; animation-duration: 1s}
+.animate3 span:nth-of-type(55){animation-delay: .75s; animation-duration: 1s}
+.animate3 span:nth-of-type(54){animation-delay: .80; animation-duration: 1s}
+.animate3 span:nth-of-type(53){animation-delay: .85; animation-duration: 1s}
+.animate3 span:nth-of-type(52){animation-delay: .90s; animation-duration: 1s}
+.animate3 span:nth-of-type(51){animation-delay: .95s; animation-duration: 1s}
+.animate3 span:nth-of-type(50){animation-delay: 1.0s; animation-duration: 1s}
+.animate3 span:nth-of-type(49){animation-delay: 1.05s; animation-duration: 1s}
+.animate3 span:nth-of-type(48){animation-delay: 1.10s; animation-duration: 1s}
+.animate3 span:nth-of-type(47){animation-delay: 1.15s; animation-duration: 1s}
+.animate3 span:nth-of-type(46){animation-delay: 1.20s; animation-duration: 1s}
+.animate3 span:nth-of-type(45){animation-delay: 1.25s; animation-duration: 1s}
+.animate3 span:nth-of-type(44){animation-delay: 1.30s; animation-duration: 1s}
+.animate3 span:nth-of-type(43){animation-delay: 1.35s; animation-duration: 1s}
+.animate3 span:nth-of-type(42){animation-delay: 1.40s; animation-duration: 1s}
+.animate3 span:nth-of-type(41){animation-delay: 1.45s; animation-duration: 1s}
+.animate3 span:nth-of-type(40){animation-delay: 1.50s; animation-duration: 1s}
+.animate3 span:nth-of-type(39){animation-delay: 1.55s; animation-duration: 1s}
+.animate3 span:nth-of-type(38){animation-delay: 1.60s; animation-duration: 1s}
+.animate3 span:nth-of-type(37){animation-delay: 1.65s; animation-duration: 1s}
+.animate3 span:nth-of-type(36){animation-delay: 1.70s; animation-duration: 1s}
+.animate3 span:nth-of-type(35){animation-delay: 1.75s; animation-duration: 1s}
+.animate3 span:nth-of-type(34){animation-delay: 1.80s; animation-duration: 1s}
+.animate3 span:nth-of-type(33){animation-delay: 1.85s; animation-duration: 1s}
+.animate3 span:nth-of-type(32){animation-delay: 1.90s; animation-duration: 1s}
+.animate3 span:nth-of-type(31){animation-delay: 1.95s; animation-duration: 1s}
+.animate3 span:nth-of-type(30) {animation-delay: .50s; animation-duration: 1s}
+.animate3 span:nth-of-type(29){animation-delay: .55s; animation-duration: 1s}
+.animate3 span:nth-of-type(28){animation-delay: .60s; animation-duration: 1s}
+.animate3 span:nth-of-type(27){animation-delay: .65s; animation-duration: 1s}
+.animate3 span:nth-of-type(26){animation-delay: .70s; animation-duration: 1s}
+.animate3 span:nth-of-type(25){animation-delay: .75s; animation-duration: 1s}
+.animate3 span:nth-of-type(24){animation-delay: .80; animation-duration: 1s}
+.animate3 span:nth-of-type(23){animation-delay: .85; animation-duration: 1s}
+.animate3 span:nth-of-type(22){animation-delay: .90s; animation-duration: 1s}
+.animate3 span:nth-of-type(21){animation-delay: .95s; animation-duration: 1s}
+.animate3 span:nth-of-type(20){animation-delay: 1.0s; animation-duration: 1s}
+.animate3 span:nth-of-type(19){animation-delay: 1.05s; animation-duration: 1s}
+.animate3 span:nth-of-type(18){animation-delay: 1.10s; animation-duration: 1s}
+.animate3 span:nth-of-type(17){animation-delay: 1.15s; animation-duration: 1s}
+.animate3 span:nth-of-type(16){animation-delay: 1.20s; animation-duration: 1s}
+.animate3 span:nth-of-type(15){animation-delay: 1.25s; animation-duration: 1s}
+.animate3 span:nth-of-type(14){animation-delay: 1.30s; animation-duration: 1s}
+.animate3 span:nth-of-type(13){animation-delay: 1.35s; animation-duration: 1s}
+.animate3 span:nth-of-type(12){animation-delay: 1.40s; animation-duration: 1s}
+.animate3 span:nth-of-type(11){animation-delay: 1.45s; animation-duration: 1s}
+.animate3 span:nth-of-type(10){animation-delay: 1.50s; animation-duration: 1s}
+.animate3 span:nth-of-type(9){animation-delay: 1.55s; animation-duration: 1s}
+.animate3 span:nth-of-type(8){animation-delay: 1.60s; animation-duration: 1s}
+.animate3 span:nth-of-type(7){animation-delay: 1.65s; animation-duration: 1s}
+.animate3 span:nth-of-type(6){animation-delay: 1.70s; animation-duration: 1s}
+.animate3 span:nth-of-type(5){animation-delay: 1.75s; animation-duration: 1s}
+.animate3 span:nth-of-type(4){animation-delay: 1.80s; animation-duration: 1s}
+.animate3 span:nth-of-type(3){animation-delay: 1.85s; animation-duration: 1s}
+.animate3 span:nth-of-type(2){animation-delay: 1.90s; animation-duration: 1s}
+.animate3 span:nth-of-type(1){animation-delay: 1.95s; animation-duration: 1s}
+
+
+.animate5 span {opacity: 0; display: inline-block;}
+.animate5 span:nth-of-type(1) {animation-delay: .4s; animation-duration: 1s}
+.animate5 span:nth-of-type(2){animation-delay: .45s; animation-duration: 1s}
+.animate5 span:nth-of-type(3){animation-delay: .5s; animation-duration: 1s}
+.animate5 span:nth-of-type(4){animation-delay: .55s; animation-duration: 1s}
+.animate5 span:nth-of-type(5){animation-delay: .6s; animation-duration: 1s}
+.animate5 span:nth-of-type(6){animation-delay: .65s; animation-duration: 1s}
+.animate5 span:nth-of-type(7){animation-delay: .7s; animation-duration: 1s}
+.animate5 span:nth-of-type(8){animation-delay: .75s; animation-duration: 1s}
+.animate5 span:nth-of-type(9){animation-delay: .8s; animation-duration: 1s}
+.animate5 span:nth-of-type(10){animation-delay: .85s; animation-duration: 1s}
+.animate5 span:nth-of-type(11){animation-delay: .9s; animation-duration: 1s}
+.animate5 span:nth-of-type(12){animation-delay: .95s; animation-duration: 1s}
+.animate5 span:nth-of-type(13){animation-delay: 1.05s; animation-duration: 1s}
+.animate5 span:nth-of-type(14){animation-delay: 1.10s; animation-duration: 1s}
+.animate5 span:nth-of-type(15){animation-delay: 1.15s; animation-duration: 1s}
+.animate5 span:nth-of-type(16){animation-delay: 1.20s; animation-duration: 1s}
+.animate5 span:nth-of-type(17){animation-delay: 1.25s; animation-duration: 1s}
+.animate5 span:nth-of-type(18){animation-delay: 1.30s; animation-duration: 1s}
+.animate5 span:nth-of-type(19){animation-delay: 1.35s; animation-duration: 1s}
+.animate5 span:nth-of-type(20){animation-delay: 1.40s; animation-duration: 1s}
+.animate5 span:nth-of-type(21){animation-delay: 1.45s; animation-duration: 1s}
+.animate5 span:nth-of-type(22){animation-delay: 1.50s; animation-duration: 1s}
+.animate5 span:nth-of-type(23){animation-delay: 1.55s; animation-duration: 1s}
+.animate5 span:nth-of-type(24){animation-delay: 1.60s; animation-duration: 1s}
+.animate5 span:nth-of-type(25){animation-delay: 1.65s; animation-duration: 1s}
+.animate5 span:nth-of-type(26){animation-delay: 1.70s; animation-duration: 1s}
+.animate5 span:nth-of-type(27){animation-delay: 1.75s; animation-duration: 1s}
+.animate5 span:nth-of-type(28){animation-delay: 1.80s; animation-duration: 1s}
+.animate5 span:nth-of-type(29){animation-delay: 1.85s; animation-duration: 1s}
+.animate5 span:nth-of-type(30){animation-delay: 1.90s; animation-duration: 1s}
+
 
 @keyframes ani1 {
   0% {opacity: 0}
@@ -72,7 +136,7 @@
   100% {transform: translate(0) rotate(0) scale(1); opacity: 1;}
 }
 @keyframes ani3 {
-  60% {transform: translate(-20px, 20px) rotate(-180deg) scale(1.2);}
+  /* 60% {transform: translate(-200px, 0px) rotate(0deg) scale(1.6);} */
   100% {transform: translate(0) rotate(0deg) scale(1); opacity: 1;}
 }
 @keyframes ani4 {
@@ -82,8 +146,8 @@
   100% {transform: translate(0) scale(1); color: #fff; opacity: 1;}
 }
 @keyframes ani5 {
-  30% {transform: translate(0, -50px) rotate(180deg) scale(1);}
-  60% {transform: translate(0, 20px) scale(.8) rotate(0deg);}
+  /* 30% {transform: translate(0, -50px) rotate(180deg) scale(1);}
+  60% {transform: translate(0, 20px) scale(.8) rotate(0deg);} */
   100% {transform: translate(0) scale(1) rotate(0deg); opacity: 1;}
 }
 @keyframes ani6 {
